# sts-managed-controls

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
artifacts/vm-sync-live-bot/: README.md
docs/: activation.html  index.html  jp.html  privacy.html  purchase.html  refund.html  styles.css  terms.html
docs/release/: commerce.example.json  license_fulfillment.md  listing_copy.md  private_content_audit.md  public_release_checklist.md  release_runbook.md  v0.1.1_release_notes.md
docs/workstreams/: managed_runtime_controls.md
profiles/: windows.example.json
profiles/templates/: README.md
scripts/: prep_public_release.ps1
src/sts_bot/: __init__.py  analysis.py  calibration.py  capture_backends.py  cli.py  config.py  control_ui.py  decision_provider.py  dev_console.py  engine.py  game_catalog.py  gamepad.py  input.py  input_backends.py  io_runtime.py  kb_learning.py  knowledge.py  live_runner.py  logging.py  managed_controls_commerce.py  managed_controls_issuer_service.py  (+14 more)
tests/: test_analysis.py  test_calibration.py  test_capture_backends.py  test_cli.py  test_config.py  test_decision_provider.py  test_dev_console.py  test_engine.py  test_game_catalog.py  test_gamepad.py  test_input.py  test_input_backends.py  test_io_runtime.py  test_kb_learning.py  test_knowledge.py  test_live_runner.py  test_managed_controls_fulfillment_service.py  test_managed_controls_license.py  test_managed_probe.py  test_memory_reader.py  test_mod_bridge.py  test_models.py  test_observe.py  test_policy.py  test_type_probe.py  test_windowing.py  test_windows_stub.py
(+7 files in other folders)
