[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sts-managed-controls"
version = "0.1.1"
description = "Local single-player runtime toolkit for Slay the Spire 2 managed controls."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.0",
    "opencv-python-headless>=4.10.0",
    "Pillow>=11.0.0",
    "PyAutoGUI>=0.9.54",
    "PyDirectInput>=1.0.4",
]

[project.scripts]
sts-lab = "sts_bot.cli:main"
sts-managed-controls = "sts_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
